# llamacontroller

./: .env.example  .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt  run.py  start_with_mock_gpu.ps1
.github/workflows/: package_release.yml  test-collection.yml
design/: 01-overview.md  03-development-setup.md  04-architecture.md  05-implementation-guide.md  06-testing-best-practices.md  08-gpu-memory-display-after-loading.md  09-process-registry-management.md  multi-gpu-string-format.md  multi-gpu-unload-button-fix.md  web-ui-gpu-selection-design.md
docs/: ACCESSING_LLAMA_SERVER.md  AIR_GAP_FIX.md  API_TEST_REPORT.md  AUTH_TEST_REPORT.md  GPU_MOCK_TESTING.md  PARAMETER_CONFIGURATION.md  PROCESS_REGISTRY.md  QUICKSTART.md  TOKEN_AUTHENTICATION_GUIDE.md  TOKEN_VALIDATION_DESIGN.md
scripts/: check_tokens.py  create_test_token.py  demo_llama_execution.py  generate_web_templates.py  init_db.py  test_api_endpoints.py  test_auth_endpoints.py  test_config.py  test_db_operations.py  test_gpu_memory_display.py  test_llama_inference.py  test_multi_gpu_card_hiding.py  test_multi_gpu_unload.py  test_process_registry.py  test_web_ui.py
src/llamacontroller/: __init__.py  _version.py  main.py
src/llamacontroller/api/: auth.py  dependencies.py  management.py  ollama.py  tokens.py  users.py
src/llamacontroller/auth/: dependencies.py  service.py  utils.py
src/llamacontroller/core/: __init__.py  adapter.py  config.py  gpu_detector.py  lifecycle.py  process_registry.py
src/llamacontroller/db/: base.py  crud.py  models.py
src/llamacontroller/models/: api.py  auth.py  config.py  gpu.py  lifecycle.py  ollama.py
src/llamacontroller/utils/: logging.py
src/llamacontroller/web/: routes.py
src/llamacontroller/web/templates/: base.html  dashboard.html  login.html  logs.html  tokens.html
src/llamacontroller/web/templates/partials/: dashboard_content.html  logs_content.html  model_list.html  model_status.html  token_list.html
tests/: README.md  __init__.py  conftest.py  test_api.py  test_api_endpoints.py  test_config.py  test_gpu_detection.py  test_lifecycle.py
work_log/: session_001_project_setup.md  session_002_phase3_api_layer.md  session_003_phase4_authentication.md  session_004_phase5_web_ui.md  session_005_web_ui_completion.md  session_006_multi_gpu_implementation.md  session_007_webui_multi_gpu.md
